changes in images and mousehovers

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
                 <div class="row">
                     <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left">
-                        <img src="assets/img/about.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/about31.jpg" class="img-fluid" alt="">
                     </div>
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right">
                         <h3>Unlock Your Digital Potential.</h3>
@@ -489,11 +489,11 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
                         <div class="member">
-                            <img src="assets/img/team/team-1.jpg" alt="" onmouseover="hoverteam(this,'assets/img/team/ceo.gif');" onmouseout="unhoverteam(this,'assets/img/team/team-1.jpg');">
+                            <img src="assets/img/team/team-1.jpg?random" alt="" onmouseover="hoverteam(this,'assets/img/team/ceo.gif?random');" onmouseout="unhoverteam(this,'assets/img/team/team-1.jpg?random');">
                             <h4>Manish Seth</h4>
                             <span>Chief Executive Officer</span>
                             <p>
-                                Magni qui quod omnis unde et eos fuga et exercitationem. Odio veritatis perspiciatis quaerat qui aut aut aut
+                                Intrepid explorer. The captain of the ship, an inspiring catalyst for innovation, growth and unwavering commitment to excellence
                             </p>
                             <div class="social">
                                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -504,30 +504,13 @@
                         </div>
                     </div>
 
-                    <!--<div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
-                        <div class="member">
-                            <img src="assets/img/team/team-2.jpg" alt="">
-                            <h4>Sarah Jhinson</h4>
-                            <span>Product Manager</span>
-                            <p>
-                                Repellat fugiat adipisci nemo illum nesciunt voluptas repellendus. In architecto rerum rerum temporibus
-                            </p>
-                            <div class="social">
-                                <a href=""><i class="bi bi-twitter"></i></a>
-                                <a href=""><i class="bi bi-facebook"></i></a>
-                                <a href=""><i class="bi bi-instagram"></i></a>
-                                <a href=""><i class="bi bi-linkedin"></i></a>
-                            </div>
-                        </div>
-                    </div>-->
-
                     <div class="col-lg-6 col-md-6 d-flex align-items-stretch" data-aos="zoom-in">
                         <div class="member">
-                            <img src="assets/img/team/team-3.jpg" alt="" onmouseover="hoverteam(this,'assets/img/team/cto.gif');" onmouseout="unhoverteam(this,'assets/img/team/team-3.jpg');">
+                            <img src="assets/img/team/team-3.jpg?random" alt="" onmouseover="hoverteam(this,'assets/img/team/cto.gif?random');" onmouseout="unhoverteam(this,'assets/img/team/team-3.jpg?random');">
                             <h4>Rajan Rawat</h4>
                             <span>CTO</span>
                             <p>
-                                Voluptas necessitatibus occaecati quia. Earum totam consequuntur qui porro et laborum toro des clara
+                                Football aficionado. Orchestrating cutting-edge solutions fueling our digital revolution with boundless curiosity and expertise.
                             </p>
                             <div class="social">
                                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -551,7 +534,7 @@
                 <div class="section-title">
                     <span>Contact</span>
                     <h2>Contact</h2>
-                    <p>Our door is alwasy open for a good cup of coffee.</p>
+                    <p>Our door is always open for a good cup of tea.</p>
                 </div>
 
                 <div class="row" data-aos="fade-up">
@@ -559,7 +542,7 @@
                         <div class="info-box mb-4">
                             <i class="bx bx-map"></i>
                             <h3>Our Address</h3>
-                            <p>23139 Mahagun Mywoods, Gaur City-2, <br>Gautam Budhha Nagar, Uttar Pradesh - 201306, India</p>
+                            <p>23139 Mahagun Mywoods, Gaur City-2, Noida <br>Gautam Budhha Nagar, Uttar Pradesh - 201306, India</p>
                         </div>
                     </div>
 
@@ -588,7 +571,7 @@
                     </div>
 
                     <div class="col-lg-6">
-                        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <form action="https://us-central1-polished-engine-373306.cloudfunctions.net/contact-form" method="post" role="form" class="php-email-form">
                             <div class="row">
                                 <div class="col-md-6 form-group">
                                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
